--- a/securedrop/sass/modules/_headline.sass
+++ b/securedrop/sass/modules/_headline.sass
@@ -12,10 +12,3 @@
 
   h2
     font-size: 25px
-
-    // Used on Source Interface index page
-    &.welcome-text
-      color: $color_deep_blue
-      text-align: left
-      letter-spacing: .02em
-      margin-bottom: .7em
