--- a/securedrop/sass/modules/_menu.sass
+++ b/securedrop/sass/modules/_menu.sass
@@ -48,7 +48,7 @@
   text-transform: capitalize
 
 .menu__trigger-icon
-  vertical-align: -10%
+  vertical-align: -17%
   object-fit: contain
 
 .menu__items
